# umbra

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PLATFORM_OVERVIEW.md  POLYMARKET.md  PRIVATE_POLYMARKET.md  README.md  SECURITY_AUDIT.md  SIMULATOR_IMPROVEMENTS.md  TODO.md  docker-compose.testnet.yml  package.json  testnet.example.toml  turbo.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  rust.yml
bench/: data.js
benches/: common.rs  crypto.rs  dag.rs  stark_proofs.rs  transaction.rs
crates/notary/: Cargo.toml  README.md
crates/notary/src/: jubjub_signer.rs  lib.rs  main.rs  persistent_hash.rs
crates/prover/: Cargo.toml  README.md
crates/prover/src/: lib.rs  main.rs
docs/: adversary-model.md  consensus-model.md  cryptographic-constructions.md  privacy-threat-model.md  protocol-spec.md  testnet.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode_message.rs  fuzz_deserialize_transaction.rs  fuzz_deserialize_vertex.rs  fuzz_transaction_validate.rs
monitoring/: grafana-dashboard.json  prometheus.yml
scripts/: generate-certs.sh  launch-testnet.sh
src/: config.rs  demo.rs  lib.rs  main.rs  mempool.rs  network.rs  node.rs  p2p.rs  rpc.rs  state.rs  storage.rs  wallet.rs  wallet_cli.rs  wallet_web.rs
src/consensus/: bft.rs  dag.rs  mod.rs
src/contracts/: dsl.rs  marketplace.rs  mod.rs
src/crypto/: commitment.rs  encryption.rs  keys.rs  mod.rs  nullifier.rs  proof.rs  stealth.rs  vrf.rs
src/crypto/stark/: balance_air.rs  balance_prover.rs  convert.rs  execution_air.rs  execution_prover.rs  formal_verification.rs  mod.rs  rescue.rs  spend_air.rs  spend_prover.rs  types.rs  verify.rs
src/network/: mod.rs  nat.rs  p2p.rs  protocol.rs
src/node/: core.rs  mempool.rs  mod.rs  rpc.rs  storage.rs
src/transaction/: builder.rs  mod.rs
src/vm/: builder.rs  contract.rs  executor.rs  instruction.rs  memory.rs  mod.rs
src/wallet/: bip39_words.rs  cli.rs  core.rs  mod.rs  web.rs
templates/: address.html  base.html  dashboard.html  error.html  history.html  init.html  messages.html  send.html  send_result.html  unlock.html
tests/: consensus_properties.rs  cross_chain.rs  dandelion.rs  e2e.rs  epoch_transitions.rs  mempool_integration.rs  network_resilience.rs  p2p_integration.rs  rpc.rs  snapshot_sync.rs  stark_constraints.rs  storage_recovery.rs  validator_lifecycle.rs  wallet_sync.rs
