[package]
name = "spectra"
version = "0.1.0"
edition = "2021"
description = """
Spectra: A post-quantum private cryptocurrency with DAG-BFT consensus.
Features: zk-STARK-ready proofs, stealth addresses, encrypted messaging,
instant finality, and no trusted setup.
"""

[dependencies]
# Post-quantum cryptography (NIST PQC standards)
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Hashing (256-bit post-quantum security via Grover bound)
blake3 = "1"

# zk-STARK proving system (no trusted setup, post-quantum)
winterfell = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }

# Randomness
rand = "0.9"

# Async runtime (for P2P and RPC)
tokio = { version = "1", features = ["full"] }

# Embedded database
sled = "0.34"

# HTTP RPC server
axum = "0.8"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# HTTP client for wallet RPC
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# JSON serialization for RPC
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# HTML templating for wallet web UI
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }

# Utilities
hex = "0.4"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
subtle = "2.6.1"
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.0.1"
rayon = "1.11.0"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true

