[package]
name = "umbra"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = """
Umbra: A post-quantum private cryptocurrency with DAG-BFT consensus.
Features: zk-STARK-ready proofs, stealth addresses, encrypted messaging,
instant finality, and no trusted setup.
"""

[dependencies]
# Post-quantum cryptography (NIST PQC standards)
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Hashing (256-bit post-quantum security via Grover bound)
blake3 = "1"

# Authenticated encryption (standard AEAD)
chacha20poly1305 = "0.10"

# zk-STARK proving system (no trusted setup, post-quantum)
winterfell = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }

# Randomness
rand = "0.10"

# Async runtime (for P2P and RPC)
tokio = { version = "1", features = ["full"] }

# Embedded database
sled = "0.34"

# HTTP RPC server
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }

# TLS (mTLS for RPC authentication)
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# HTTP client for wallet RPC
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# JSON serialization for RPC
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# HTML templating for wallet web UI
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }

# Key derivation (memory-hard password hashing for wallet files)
argon2 = "0.5"

# Utilities
hex = "0.4"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
subtle = "2.6.1"
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.0.2"
rayon = "1.11.0"
igd-next = { version = "0.16", features = ["aio_tokio"] }
tempfile = "3"
colored = "3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs"

[profile.release]
opt-level = 3
lto = true

