[package]
name = "statera-notary"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
tlsn = { path = "../../tlsn/crates/tlsn" }

bincode = "1.3"
chrono = "0.4"
dotenvy = "0.15"
futures = "0.3"
group = "0.13"
hex = "0.4"
jubjub = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
  "sync",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webpki-root-certs = "1.0"
