[package]
name = "statera-prover"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
tlsn = { path = "../../tlsn/crates/tlsn" }
tlsn-formats = { path = "../../tlsn/crates/formats" }
spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "6168663" }
statera-notary = { path = "../notary" }

axum = "0.8"
bincode = "1.3"
dotenvy = "0.15"
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
  "sync",
] }
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
webpki-root-certs = "1.0"
